[package]
name = "imatree"
version = "0.1.1"
edition = "2021"
description = "A simple command line tool to generate aesthetically pleasing (and sometimes not so pleasing) images of whatever string you want."
license = "MIT"
repository = "https://github.com/sagoez/imatree"
readme = "README.md"
authors = ["Samuel <swe@samuelgomez.co>"]
keywords = ["image-generation", "text-rendering", "cli", "graphics", "png"]
categories = ["command-line-utilities", "graphics", "text-processing"]

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.6.4", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
text-to-png = "0.3.0"
